--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      # Script inicial (opcional, se quiser que ele crie a tabela ao nascer)
+      # Script inicial (opcional)
       - ./Data_Layer/silver/ddl.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
@@ -34,37 +34,6 @@ services:
       - "8080:80"
     depends_on:
       - db
-
-  # --- 3. SEU AMBIENTE DE DADOS (JUPYTER LAB + SPARK) ---
-  jupyter-lab:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    container_name: acidentes_jupyter
-    ports:
-      - "8888:8888"
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      # Variáveis para conexão
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: acidentes_db
-      DB_USER: postgres
-      DB_PASS: admin
-      # Permite root se precisar instalar algo na hora
-      GRANT_SUDO: "yes"
-    volumes:
-      # --- MAPEAMENTO (Windows/Linux -> Docker) ---
-      # Mapeia a pasta Data_Layer (conforme sua imagem)
-      - ./Data_Layer:/home/jovyan/work/Data_Layer
-      # Mapeia a pasta Transformer
-      - ./Transformer:/home/jovyan/work/Transformer
-      # (Opcional) Mapeia requirements se quiser editar de fora
-      - ./requirements.txt:/home/jovyan/work/requirements.txt
-    # Inicia sem pedir token/senha
-    command: start-notebook.sh --NotebookApp.token='' --NotebookApp.password=''
 
 volumes:
   postgres_data:
